hphp/test/zend/good/Zend/tests/dynamic_call_003.php.expectf

Fatal error: Function name must be a string in %s/dynamic_call_003.php on line 6
